--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 *{
     margin: 0;
     padding: 0;
@@ -12,15 +11,18 @@ body{
 }
 
 .logo{
-    width:200px;
-    height:150px;
-    padding-left: 30px;
+    
+    height:200px;
+    padding-top: 30px;
+    padding-left: 5px;
+    font-size: 90px;
+    font-weight: 650;
 }
 
 .section-main{
     position: relative;
     width: 100%;
-    min-height: 60vh;
+    height: 40vh; 
     background: url("https://i.pinimg.com/474x/0e/ad/e1/0eade1f76a3f4720666face2fd23cbea.jpg") no-repeat;
     background-size: cover;
     background-position: center;
@@ -42,6 +44,7 @@ body{
 
 header{
     z-index: 999;
+    height: 80px;
     /* background-color: transparent; */
     position: fixed;
     top: 0;
@@ -62,18 +65,17 @@ header.sticky{
 
 
 header .menu{
-    position: relative;
+    position: left;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    padding-top: 30px
 }
 
 header .menu a{
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 500;
     text-decoration: none;
     margin: 0 30px;
-    padding: 0 10px 10px 10px;
+    padding: 30px 0px 10px 10px;
     margin-right: 50px;
     border-radius: 20px;
     color: #6f1d1b;
@@ -93,9 +95,7 @@ header .btn{
 
 .section-two{
     min-height: 100vh;
-    /* change this color */
-    /* background: #F6AC6D;  */
-    padding: 20px 100px;
+    padding: 20px ;
     text-align: center;
 }
 
@@ -157,8 +157,12 @@ header .btn{
 
 @media (max-width: 1060px){
     .section-main h1{
-        font-size: 50px;
-        line-height: 60px;
+        font-size: 40px;
+        line-height: 10px;
+    }
+
+    .logo{
+      font-size: 60px;
     }
 }
 
@@ -166,76 +170,70 @@ header .btn{
 
 /* THE TYPES OF TRAVEL */
 .types{
-    width: 100%;
-    margin:auto;
-    text-align: center;
-    padding: 20px 100px 10px 100px;
-    /* background: #F6AC6D;  */
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 20px 100px 10px 100px;
+}
+.h1{
+  color: #6f1d1b;
+  font-size: 36px;
+  font-weight: 600;
+  font: bold;
+} 
+
+p{
+  color: #1B6D6F;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 22px;
+  padding: 10px;
+} 
+
+.row{
+  margin-top: 5%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.types-col{
+  flex-basis: 31%;
+  background: #edd0ce;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  padding: 20px 12px;
+  box-sizing: border-box;
+}
+
+h3{
+  width: 80%;
+  text-align: center;
+  font-weight: 600;
+  margin: 10px 0;
+  color: #6f1d1b;
+}
+.types-col ul{
+  color: #1B6D6F;
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  row-gap:20px;
+}
+
+
+.types-col:hover{
+  box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+}
+
+@media(max-width: 1060px){
+  .row{
+      flex-direction: column;
   }
-  
-  h1{
-    color: #6f1d1b;
-    font-size: 50px;
-    font-weight: 700px;
-    font: bold;
-    }
-  
-  p{
-    color: #1B6D6F;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 22px;
-    padding: 10px; 
-  }
-  
+}
 
   #q{color: rgb(120, 6, 120);
-font-weight: 800;
-font-size: 18px;}
-
-  .row{
-    margin-top: 5%;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .types-col{
-    flex-basis: 31%;
-    width: 2000px;
-    /* background: #fff3f3; */
-    background: #edd0ce;
-    border-radius: 10px;
-    margin-bottom: 10px;
-    padding: 20px 12px;
-    box-sizing: border-box;
-    transition: 0.5s;
-  }
-  
-  h3{
-    text-align: center;
-    font-weight: 600;
-    margin: 10px 0;
-    color: #6f1d1b;
-  }
-
-  .types-col ul li{
-    color: #1B6D6F;
-    padding: 10px;
-  }
-  
-  .types-col:hover{
-    box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
-  }
-  
-  .types .row{
-    padding: 20px 100px 20px 100px;
-  }
-  
-  @media(max-width: 1060px){
-    .row{
-      flex-direction: column;
-    }
-  }
+    font-weight: 800;
+    font-size: 18px;}
   /* -------------------------------------------------------------------------------------------------------- */
 
   /* THE SEASONAL */
@@ -244,9 +242,13 @@ font-size: 18px;}
     width: 80%; /* gives space on right and left side */
     margin: auto; /* create space around elements, outside of any defined borders.  */
     text-align: center;
-    padding-top: 50px; /* space from top */
+    padding-top: 100px; /* space from top */
   }
   
+  .seasonal h1{
+    padding-top: 10px
+  }
+
   .seasonal-col{
     flex-basis: 32%;
     border-radius: 10px;
@@ -306,7 +308,7 @@ font-size: 18px;}
     flex-basis: 31%;
     border-radius: 10px;
     margin-bottom: 5%;
-    text-align: left;  
+    text-align: center;  
   }
   
   .tools-col img{
@@ -368,7 +370,8 @@ font-size: 18px;}
       
       /* Full-width input fields */
         input[type=text], input[type=password] {
-        width: 80%;
+          /* changed */
+        width: 100%;
         padding: 15px;
         margin: 5px 10px 22px 0;
         display: inline-block;
@@ -393,7 +396,7 @@ font-size: 18px;}
         margin: 18px 0 10px 0px;
         text-align: center;
         padding-bottom: 30px;
-        box-sizing: border-box;
+        box-sizing: content-box;
         transition: 0.5s;
       }
       
@@ -465,8 +468,17 @@ font-size: 18px;}
       /* Change styles for cancel button and signup button on extra small screens */
       @media screen and (max-width: 1060px) {
         .cancelbtn, .signupbtn {
-          width: 80%;
+          width: 100%;
         }
+        
+        .row1{
+          flex-direction: column;
+      }
+
+      .sign-up-fomr{
+        box-sizing:content-box;
+        width:100%;
+      }
       }
       
       
@@ -581,16 +593,24 @@ font-size: 18px;}
 
   /* REVIEWS */
 
-  #hero-btn{
-    /* display: inline-block; */
+  .hero-btn{
+    display: inline-block;
+    font-weight: 300px;
     text-decoration: none;
-    color: #6f1d1b;
-    padding-bottom:100px;
+    color: #390909;
+    padding-top:10px;
+    padding-bottom:10px;
     border: 1px solid #fff;
     font-size: 13px;
     background: transparent;
     position: relative;
     cursor: pointer;
+  }
+
+  .hero-btn:hover{
+    border: 1px solid #6f1d1b;
+    background: #b7706e;
+    transition: 1s;
   }
       
   .testimonials{
@@ -622,10 +642,6 @@ font-size: 18px;}
     display: flex;
   }
   
-  /* .testimonial-col a{
-    padding-bottom:100px;
-  } */
-  
   .testimonial-col img{
     height: 100px;
     width: 40vh;
@@ -651,8 +667,33 @@ font-size: 18px;}
   @media(max-width: 1060px)
   {
     .testimonial-col img{
+      width: 10%;
       margin-left: 0px;
       margin-right: 15px;
+    }
+    .row1{
+      width:100%;
+      flex-direction: column;
+    }
+    .para h4{
+      text-align: center;
+      padding-left: 50px;
+    }
+
+    .testimonials h1{
+      /* text-align: center; */
+      padding-left: 120px;
+    }
+
+    .para p{
+      padding-right: 10px;
+      padding-left:90px;
+    }
+
+    .testimonials p{
+      padding-right: 5px;
+      padding-left: 150px;
+      padding-bottom: 10px;
     }
   }
 /* ------------------------------------------------------------------------------------------------------------------------ */
